cmake_minimum_required(VERSION 3.10.2)
project(LeetCode C)

set(CMAKE_C_STANDARD 99)

add_executable(Two-Sum Algorithms/1-Two-Sum.c)
add_executable(Add-Two-Numbers Algorithms/2-Add-Two-Numbers.c)
add_executable(Longest-Substring-Without-Repeating-Characters Algorithms/3-Longest-Substring-Without-Repeating-Characters.c)
add_executable(Median-Of-Two-Sorted-Arrays Algorithms/5-Median-Of-Two-Sorted-Arrays.c)
add_executable(Longest-Palindromic-Substring Algorithms/6-Longest-Palindromic-Substring.c)
add_executable(Remove-Nth-Node-From-End-Of-List Algorithms/19-Remove-Nth-Node-From-End-Of-List.c)
add_executable(Search-Insert-Position Algorithms/35-Search-Insert-Position.c)
add_executable(Two-Sum-II-Input-Array-Is-Sorted Algorithms/167-Two-Sum-II-Input-Array-Is-Sorted.c)
add_executable(Rotate-Array Algorithms/189-Rotate-Array.c)
add_executable(First-Bad-Version Algorithms/278-First-Bad-Version.c)
add_executable(Move-Zeros Algorithms/283-Move-Zeros.c)
add_executable(Reverse-String Algorithms/344-Reverse-String.c)
add_executable(Reverse-Words-In-A-String-III Algorithms/557-Reverse-Words-In-A-String-III.c)
add_executable(Permutation-In-String Algorithms/567-Permutation-In-String.c)
add_executable(Binary-Search Algorithms/704-Binary-Search.c)
add_executable(Flood-Fill Algorithms/733-Flood-Fill.c)
add_executable(Middle-Of-The-Linked-List Algorithms/879-Middle-Of-The-Linked-List.c)
add_executable(Squares-Of-Sorted-Array Algorithms/977-Squares-Of-Sorted-Array.c)

add_executable(Contains-Duplicate DataStructure/Simple/Array/217-Contains-Duplicate.c)
add_executable(Maximum-Subarray DataStructure/Simple/Array/53-Maximum-Subarray.c)
add_executable(Two-Sum-D DataStructure/Simple/Array/1-Two-Sum.c)
add_executable(Merge-Sorted-Array DataStructure/Simple/Array/88-Merge-Sorted-Array.c)
add_executable(Intersection-Of-Two-Array-II DataStructure/Simple/Array/350-Intersection-Of-Two-Array-II.c)
add_executable(Best-Time-To-Buy-And-sell-Stock-D DataStructure/Simple/Array/121-Best-Time-To-Buy-And-sell-Stock.c)
add_executable(Reshape-The-Matrix DataStructure/Simple/Array/566-Reshape-The-Matrix.c)
add_executable(Pascals-Triangle DataStructure/Simple/Array/118-Pascals-Triangle.c)
add_executable(Valid-Sudoku DataStructure/Simple/Array/36-Valid-Sudoku.c)
add_executable(Set-Matrix-Zeros DataStructure/Simple/Array/73-Set-Matrix-Zeros.c)
add_executable(First-Unique-Character-In-A-String DataStructure/Simple/Array/217-First-Unique-Character-In-A-String.c)

add_executable(Ransom-Letter DataStructure/Simple/String/383-Ransom-Letter.c)
add_executable(Valid-Anagram DataStructure/Simple/String/242-Valid-Anagram.c)

add_executable(Linked-List-Cycle DataStructure/Simple/List/141-Linked-List-Cycle.c)
add_executable(Remove-Linked-List-Elements DataStructure/Simple/List/203-Remove-Linked-List-Elements.c)
add_executable(Merge-Two-Sorted-Lists DataStructure/Simple/List/21-Merge-Two-Sorted-Lists.c)
add_executable(Reverse-Linked-List DataStructure/Simple/List/206-Reverse-Linked-List.c)
add_executable(Remove-Duplicates-From-Sorted-List DataStructure/Simple/List/83-Remove-Duplicates-From-Sorted-List.c)

add_executable(20-Valid-Parentheses DataStructure/Simple/Stack/20-Valid-Parentheses.c)
add_executable(Implement-Queue-Using-Stacks DataStructure/Simple/Stack/232-Implement-Queue-Using-Stacks.c)

add_executable(Binary-Tree-Preorder-Traversal DataStructure/Simple/Tree/144-Binary-Tree-Preorder-Traversal.c)
add_executable(Binary-Tree-level-Order-Traversal DataStructure/Simple/Tree/102-Binary-Tree-level-Order-Traversal.c)
add_executable(Maximum-Depth-Of-Binary-Tree DataStructure/Simple/Tree/104-Maximum-Depth-Of-Binary-Tree.c)
add_executable(Symmetric-Tree DataStructure/Simple/Tree/101-Symmetric-Tree.c)
add_executable(Invert-Binary-Tree DataStructure/Simple/Tree/206-Invert-Binary-Tree.c)
add_executable(Path-Sum DataStructure/Simple/Tree/112-Path-Sum.c)
add_executable(Search-In-Binary-Search-Tree DataStructure/Simple/Tree/700-Search-In-Binary-Search-Tree.c)
add_executable(Insert-Into-A-Binary-Search-Tree DataStructure/Simple/Tree/701-Insert-Into-A-Binary-Search-Tree.c)
add_executable(Validate-Binary-Search-Tree DataStructure/Simple/Tree/98-Validate-Binary-Search-Tree.c)
add_executable(Two-Sum-IV-Input-Is-A-BST DataStructure/Simple/Tree/653-Two-Sum-IV-Input-Is-A-BST.c)
add_executable(Lowest-Common-Ancestor-Of-A-Binary-Search-Tree DataStructure/Simple/Tree/235-Lowest-Common-Ancestor-Of-A-Binary-Search-Tree.c)

add_executable(Single-Number DataStructure/Medium/Array/136-Single-Number.c)
add_executable(Majority-Element DataStructure/Medium/Array/169-Majority-Element.c)
add_executable(3-Sum DataStructure/Medium/Array/15-3-Sum.c)
add_executable(Sort-Colors DataStructure/Medium/Array/75-Sort-Colors.c)