cmake_minimum_required(VERSION 3.10.2)
project(LeetCode C)

set(CMAKE_C_STANDARD 99)

add_executable(1-704-Binary-Search Algorithm/1-704-Binary-Search.c)
add_executable(2-278-First-Bad-Version Algorithm/2-278-First-Bad-Version.c)
add_executable(3-35-Search-Insert-Position Algorithm/3-35-Search-Insert-Position.c)
add_executable(4-977-Squares-Of-A-Sorted-Array Algorithm/4-977-Squares-Of-A-Sorted-Array.c)
add_executable(5-189-Rotate-Array Algorithm/5-189-Rotate-Array.c)
add_executable(6-283-Move-Zeros Algorithm/6-283-Move-Zeros.c)
add_executable(7-167-Two-Sum-II-Input-Array-Is-Sorted Algorithm/7-167-Two-Sum-II-Input-Array-Is-Sorted.c)
add_executable(8-344-Reverse-String Algorithm/8-344-Reverse-String.c)
add_executable(9-557-Reverse-Words-In-A-String-III Algorithm/9-557-Reverse-Words-In-A-String-III.c)
add_executable(10-876-Middle-Of-The-Linked-List Algorithm/10-876-Middle-Of-The-Linked-List.c)
add_executable(11-19-Remove-Nth-Node-From-End-Of-List Algorithm/11-19-Remove-Nth-Node-From-End-Of-List.c)
add_executable(12-3-Longest-Substring-Without-Repeating-Characters Algorithm/12-3-Longest-Substring-Without-Repeating-Characters.c)
add_executable(13-567-Permutation-In-String Algorithm/13-567-Permutation-In-String.c)
add_executable(14-733-Flood-Fill Algorithm/14-733-Flood-Fill.c)
add_executable(15-695-Max-Area-Of-Island Algorithm/15-695-Max-Area-Of-Island.c)
add_executable(16-617-Merge-Two-Binary-Trees Algorithm/16-617-Merge-Two-Binary-Trees.c)
add_executable(17-116-Populating-Next-Right-Pointers-In-Each-Node Algorithm/17-116-Populating-Next-Right-Pointers-In-Each-Node.c)
add_executable(18-542-01-Matrix Algorithm/18-542-01-Matrix.c)
add_executable(19-994-Rotting-Oranges Algorithm/19-994-Rotting-Oranges.c)
add_executable(20-21-Merge-Two-Sorted-Lists Algorithm/20-21-Merge-Two-Sorted-Lists.c)
add_executable(21-206-Reverse-Linked-List Algorithm/21-206-Reverse-Linked-List.c)